...
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/double_margin"
                    android:layout_marginEnd="@dimen/double_margin"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/title_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/half_margin"
                        android:layout_marginBottom="@dimen/half_margin"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/choose_title_text"
...
                        android:text="@string/choose_type_text"
                        android:textColor="#2F3249"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <LinearLayout
                        android:id="@+id/type_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin"
                        android:baselineAligned="false"
                        android:gravity="center"
                        android:orientation="horizontal">
...
                            android:layout_weight="1"
                            android:foregroundGravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                        <ImageButton
                                android:id="@+id/tool_button"
                                style="@style/AppTheme.RoundedCornerMaterialButton"
                                android:layout_width="@dimen/icon_size"
                                android:layout_height="@dimen/icon_size"
                                android:layout_gravity="center|center_horizontal"
                                android:layout_marginStart="@dimen/margin"
                                android:layout_marginEnd="@dimen/margin"
...
                        android:text="@string/choose_name_text"
                        android:textColor="#2F3249"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <EditText
                        android:id="@+id/name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/choose_name_hint"
                        android:inputType="textPersonName"
                        android:shadowColor="@color/colorPrimary"
                        android:text="@={viewModel.name}"
                        android:textColorHighlight="@color/colorAccent"
                        android:importantForAutofill="no" />

                <TextView
                        android:id="@+id/description_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/choose_description_text"
                        android:textColor="#2F3249"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <EditText
                        android:id="@+id/description_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/choose_description_hint"
                        android:inputType="textPersonName"
                        android:text="@={viewModel.description}"
                        android:textColorHighlight="@color/colorAccent"
                        android:importantForAutofill="no" />

                <Button
                        android:id="@+id/button2"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_marginTop="@dimen/margin"
                        android:enabled="@{viewModel.share}"
                        android:onClick="@{viewModel::onShareBtnClick}"
                        android:padding="@dimen/double_padding"
                        android:text="@string/add_button"
...
