<resources>
    <string name="app_name">iShareEconomy</string>
    <!-- Bottom Navigation-->
    <string name="title_lending">Lending</string>
    <string name="title_using">Using</string>
    <string name="title_requests">Requests</string>

    <!-- API calls and related-->
    <string name="sp_login_username" translatable="false">com.ishareEconomy_android.login.username</string>
    <string name="sp_login_password" translatable="false">com.ishareEconomy_android.login.password</string>
    <string name="something_went_wrong_login">Something went wrong, please ensure you are connected to the internet</string>

    <!-- Id's for Shared Preference values -->
    <string name="sp_user_token" translatable="false">com.ishareEconomy_android.login.token</string>

    <!-- Strings related to Common Use -->
    <string name="tool">Tool</string>
    <string name="service">Service</string>
    <string name="transport">Transportation</string>

    <!-- Strings related to Login -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login_button">Login</string>
    <string name="error_username">Username can\'t be empty</string>
    <string name="error_password">Password can\'t be empty</string>
    <string name="welcome">Welcome</string>
    <string name="wrong_login_credentials">Incorrect username or password</string>

    <!-- Strings related to LendingScreen -->
    <string name="add_lending_object_button">Share new</string>
    <string name="remove_lending_object_button">Enable delete</string>
    <string name="remove_instruction">Swipe right to delete</string>
    <string name="remove_not_possible">Can\'t delete used items!</string>

    <!-- Strings related to AddLendingScreen -->
    <string name="choose_title_text">Sharing a new item</string>
    <string name="choose_type_text">That is of type:</string>
    <string name="choose_name_text">With the name:</string>
    <string name="choose_name_hint">Enter a name</string>
    <string name="choose_description_text">And the description:</string>
    <string name="choose_description_hint">Enter a description</string>
    <string name="tool_button_content_desc">The button for type tool</string>
    <string name="service_button_content_desc">The button for type service</string>
    <string name="transport_button_content_desc">The button for type transport</string>
    <string name="add_button">Share</string>
    <string name="tools_full_name">Full name</string>
    <string name="no_current_user">No Current User</string>
    <string name="from_date_to_date">From date to date</string>
    <string name="user_icon_content_desc">A user icon</string>
    <string name="info_icon_content_desc">An info icon</string>
    <string name="tools_distance_default">0.0 km</string>
    <string name="object_icon_desc">The object type icon</string>
    <string name="tools_object_name">Object name</string>
    <string name="tools_object_desc">Object description</string>

</resources>
