<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="object"
                type="com.ocean.ishareeconomy_android.viewmodels.LendObjectViewModel" />
        <variable
                name="callback"
                type="com.ocean.ishareeconomy_android.lending.LendObjectClick" />
    </data>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> callback.onClick(object.lendObject)}"
            style="@style/AppTheme.MaterialCard">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/lend_object_type"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@{object.color()}"
                    android:contentDescription="@string/object_icon_desc"
                    android:padding="@dimen/padding"
                    app:imageResource="@{object.type()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="@color/colorAccent"
                    tools:srcCompat="@drawable/ic_lendobject_tool_solid" />

            <LinearLayout
                    android:id="@+id/lend_object_main_body"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="fill"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/lend_object_type"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                    app:layout_constraintStart_toEndOf="@+id/lend_object_type"
                    app:layout_constraintTop_toTopOf="@+id/lend_object_type">

                <TextView
                        android:id="@+id/title_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{object.name}"
                        android:textSize="@dimen/title_text_size"
                        android:textStyle="bold"
                        tools:text="@string/tools_object_name" />

                <TextView
                        android:id="@+id/description_text"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@{object.description}"
                        android:textSize="@dimen/regular_text_size"
                        tools:text="@string/tools_object_desc" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/lend_object_main_body"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/lend_object_main_body"
                    tools:ignore="UseCompoundDrawables">

                <ImageView
                        android:id="@+id/info_icon"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:contentDescription="@string/user_icon_content_desc"
                        app:srcCompat="@drawable/ic_user_circle_solid" />

                <TextView
                        android:id="@+id/users_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{object.numberOfUsers}"
                        android:textAlignment="center" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>